testing/framework/resources/Advanced/Failing/mondrian/query2480.q
select  time_by_day.the_year as c0,  store.store_country as c1 from  time_by_day as time_by_day,  agg_c_14_sales_fact_1997 as agg_c_14_sales_fact_1997,  store as storenwhere  agg_c_14_sales_fact_1997.month_of_year = time_by_day.month_of_year and  agg_c_14_sales_fact_1997.store_id = store.store_id group by  time_by_day.the_year,  store.store_country order by  time_by_day.the_year ASC NULLS LAST,  store.store_country ASC NULLS LAST;
